[package]
name = "a2silk-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes="1.7.1"
silk-rs = "0.2.0"
clap={ version="4.5.13", features=["derive"] }
claxon = "0.4.3"
minimp3_fixed ="0.5.4"
lewton = "0.10.2"
# rodio = "0.19.0"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = "debuginfo"